css/responsive.css
@media only screen and (max-width: 580px) {
  body[yahoo] .maintable, body[yahoo] .maincell {
    width: 100% !important;
    overflow: hidden !important;
    min-width: 320px;
  }

  body[yahoo] .maintable {
    margin-top: 10px !important;
  }

  body[yahoo] .toptable {
    padding-right: 10px;
  }

  body[yahoo] .username span {
    border: 0 !important;
    padding: 0 !important;
  }

  body[yahoo] .logotable {
    padding: 0 10px;
  }

  body[yahoo] .blankcell {
    padding: 30px 10px !important;
    background-image: none !important;
    border-radius: 0px !important;
  }

  body[yahoo] .hide {
    display: none !important;
  }

  body[yahoo] h1 {
    font-size: 40px !important;
  }

  body[yahoo] h2 {
    font-size: 30px !important;
  }

  body[yahoo] h3 {
    font-size: 22px !important;
  }

  body[yahoo] img {
    max-width: 100% !important;
    height: auto;
  }

  body[yahoo] .terms {
    padding: 15px 15px 0 15px !important;
  }

  body[yahoo] .responsive-img {
    width: 100%;
    height: auto;
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center center;
    margin-left: auto !important;
    margin-right: auto !important;
  }

  body[yahoo] .responsive-img a {
    display: block;
    height: 100%;
    width: 100%;
  }

  body[yahoo] .responsive-img img {
    height: auto !important;
    visibility: hidden !important;
  }

  body[yahoo] .boxcell {
    padding: 10px !important;
  }

  body[yahoo] .twocolstable {
    margin: 15px 0;
  }

  body[yahoo] .twocolscell {
    width: 100% !important;
    float: left;
    padding: 15px 0 0 0 !important;
    border-right: 0 !important;
  }

  body[yahoo] .twocolscell:first-child {
    padding-top: 0 !important;
  }

  body[yahoo] .twocolstable.border .twocolscell:first-child {
    padding: 0 0 15px 0 !important;
    border-bottom-width: 1px !important;
    border-bottom-style: solid !important;
  }

  body[yahoo] .blankcell p {
    font-size: 15px !important;
    line-height: 22px !important;
  }

  body[yahoo] .linkscell {
    float: left;
    display: block;
    width: 100% !important;
  }

  body[yahoo] .linkscell table {
    width: 100% !important;
    margin-top: 15px !important;
  }

  body[yahoo] .linkscell h4 {
    margin-right: 0 !important;
  }

  body[yahoo] .list tr td:first-child, body[yahoo] .list tr th:first-child {
    padding-left: 7px !important;
  }

  body[yahoo] .list tr td:last-child, body[yahoo] .list tr th:last-child {
    padding-right: 7px !important;
  }

  body[yahoo] table {
    width: 100% !important;
  }

  body[yahoo] .hide-desktop {
    font-size: 12px !important;
    max-height: none !important;
    display: block !important;
    z-index: 2;
  }


  body[yahoo] .logotable .logocell:first-child {
    background: transparent url(../gfx/logo@2x.png) no-repeat left center;
    background-size: contain;
  }

  body[yahoo] .logotable .logocell:first-child img {
    width: auto;
    visibility: hidden;
  }

  body[yahoo] .center {
    margin: 0 auto;
    display: block;
  }

  body[yahoo] .mobile-full-width {
    width: 100% !important;
  }
}

@media only screen and (min-device-pixel-ratio: 2) { {
  body[yahoo] .logotable .logocell:first-child {
    background: transparent url(../gfx/logo@2x.png) no-repeat left center;
    background-size: contain;
  }

  body[yahoo] .logotable .logocell:first-child img {
    width: auto;
    visibility: hidden;
  }
}

